Fixed header scrolling on mobile

--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -43,6 +43,10 @@ a {
 }
 
 @media only screen and (max-width: 800px) {
+  :host {
+    position: relative;
+  }
+
   img {
     max-width: 80%;
   }
